fix highlighting on mobile

--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -44,22 +44,3 @@
     text-align: right;
   }
 }
-
-@media screen and (min-width: $viewport-medium) {
-  html {
-    font-size: 0.95em;
-  }
-}
-
-@media screen and (min-width: $viewport-large) {
-  html {
-    font-size: 0.95em;
-  }
-}
-
-@media screen and (min-width: ($viewport-large + 14)) {
-  em img {
-    max-width: $measure-width + 14;
-    margin-left: -7em;
-  }
-}
