--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -59,20 +59,13 @@
   grid-auto-rows: minmax(min-content, max-content);
 }
 
-@media (max-width: 768px) {
-  .posts-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .post-item:hover .post-item {
-    background-color: #fffef4;
-  }
-}
-
 .post-item {
   margin: 0;
   padding: 1rem;
   background-color: #fffef4;
   transition: background-color 0.2s ease, color 0.2s ease;
+  text-decoration: none; // Remove text decoration for post-item
+  color: inherit; // Ensure text color is inherited
 }
 
 .post-item:hover {
@@ -87,7 +80,6 @@
 
 .post-item:hover  .post-title {
   color: white;
-  text-decoration: none;
 }
 
 .post-thumbnail {
@@ -111,4 +103,17 @@
   margin-top: 0.5em;
   font-size: $base-font-size;
   color: #666;
+}
+
+@media (max-width: $viewport-small) {
+  .posts-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .post-item:hover {
+    background-color: #fffef4;
+    color: #484848;
+  }
+  .post-item:hover  .post-title {
+    color: #484848;
+  }
 }
