--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,9 +29,9 @@ $abbr-border-bottom: 1px black dotted;
 $measure-width: 45rem !default;
 
 // Viewport widths
-$viewport-small: 32em;
-$viewport-medium: 48em;
-$viewport-large: 64em;
+$viewport-small: 768px;
+$viewport-medium: 153.3em;
+$viewport-large: 100em;
 
 // Header Colors
 $header-bg: #fffef4 !default;
